Missing cguid class added to level 1 driver makefiles

--- a/config_examples/segfault.vscpd.conf
+++ b/config_examples/segfault.vscpd.conf
@@ -22,7 +22,7 @@
         <dm enable="true" path="/srv/vscp/dm.xml"/>
 
         <!-- Path to variables storage. -->
-        <variables enable="true" path="/etc/vscp/variables.xml"/>
+        <variables enable="true" path="/srv/vscp/variables.xml"/>
 
         <!-- Set to true to disable VSCP high end services -->
         <vscp enable="true"/>
@@ -32,7 +32,7 @@
         <webrootpath>/home/akhe/vscp_merlin</webrootpath>
 
 	<!-- Path to file holding mime types -->
-	<pathtomimetypes>/etc/vscp/mimetypes.xml</pathtomimetypes>
+	<pathtomimetypes>/etc/vscpd/mimetypes.xml</pathtomimetypes>
 
         <websockets enable="true" port="7681" />
 
@@ -75,67 +75,53 @@
 	
         <!-- List level I/CANAL drivers here -->
         <canaldriver> 
-
-            <driver enable="false">
+            <driver>
                 <name>logger</name>
                 <config>/tmp/canallog.txt</config>
-                <path>/home/akhe/vscp_software/src/vscp/drivers/level1/logger/linux/canallogger.so</path>
+                <path>
+			/home/akhe/vscp_software/src/vscp/drivers/level1/logger/linux/canallogger.soa
+		</path>
                 <flags>1</flags>
             </driver>
-
-            <driver enable="false" >
+            <driver>
                 <name>can232</name>
                 <config>/dev/ttyS0;19200;0;0;125</config>
                 <path>/usr/local/lib/can232drv.soa</path>
                 <flags>0</flags>
             </driver>
-
         </canaldriver>
 
 	<!-- List level II VSCP drivers here-->
         <vscpdriver>	 	
 
             <!-- Level II Logger -->
-            <driver enable="true" >
+            <driver prefix="mainlogger" >
                 <name>VSCPLoggerDriver1</name>	
-                <path>/home/akhe/vscp_software/src/vscp/drivers/level2/logger/linux/vscpl2_loggerdrv.so</path>
+                <path>/home/akhe/vscp_software/src/vscp/drivers/level2/logger/linux/vscpl2_loggerdrv.soa</path>
                 <config>/tmp/vscp_level2.log</config> 		
                 <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
            </driver>
  	
-           <driver enable="true" >
-               <name>lmsensors</name>
-               <path>/home/akhe/vscp_software/src/vscp/drivers/level2/lmsensors/linux/vscp2drv_lmsensors.so</path>
+           <driver prefix="lmsensors1" >
+               <name>VSCPLMSensorsDriver1</name>
+               <path>/home/akhe/vscp_software/src/vscp/drivers/level2/lmsensors/linux/vscp2drv_lmsensors.soa</path>
                 <config>2</config>
-                <guid>01:02:03:04:05:00:00:00:00:00:00:00:00:00:00:00</guid>
+                <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
             </driver>
 
-	    <driver enable="false" >
+	    <driver prefix="socketcan1" >
                 <name>VSCPSocketCANDriver 1</name>
                 <path>/home/akhe/vscp_software/src/vscp/drivers/level2/socketcan/linux/vscp2drv_socketcan.so</path>
                 <config>can0</config>
                 <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
             </driver>
 
-            <driver enable="true" >
+            <driver prefix="mqtt1" >
                 <name>VSCPMQTTDriver1</name>
-                <path>/home/akhe/vscp_software/src/vscp/drivers/level2/mqtt/linux/vscp2drv_mqtt.so</path>
-                <config>subscribe;vscp;localhost;1883;;60</config>
-                <guid>08:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
+                <path>/home/akhe/vscp_software/src/vscp/drivers/level2/mqtt/linux/vscp2drv_mqtt.soa</path>
+                <config>publish;vscp;localhost;1883;;60</config>
+                <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
             </driver>	
-
-            <driver enable="true" >                 
-                <name>tcpiplink1</name>
-                <path>/home/akhe/vscp_software/src/vscp/drivers/level2/tcpdrv/linux/vscp2drv_tcpiplink.so</path>
-                <config>192.168.1.2;9598;admin;secret</config>                 
-                <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>                </driver>
-
-            <driver enable="true"> 		   	 			
-                <name>rawethernet1</name> 		   	 		
-                <config>eth0</config>
-                <path>/home/akhe/vscp_software/src/vscp/drivers/level2/rawethernet/vscp2drv_raweth.so</path>
-            </driver>
- 
 
         </vscpdriver>	
 
