--- a/Makefile.in
+++ b/Makefile.in
@@ -12,4 +12,16 @@ clean:
 
 install:
 	@for d in $(PROJ_SUBDIRS); do (cd $$d && $(MAKE) install); done
+	lsb_release -i
+        mkdir -p /srv/vscp/actions
+	mkdir -p /srv/vscp/web
+        mkdir -p /etc/vscp
+        $(INSTALL_PROGRAM) -b -m755 vscpd.startup_script_debian /etc/init.d/vscpd
+        update-rc.d vscpd defaults
+        $(INSTALL_PROGRAM) -b -m744 config_examples/web/index.html /srv/vscp/web/
+	$(INSTALL_PROGRAM) -b -m744 config_examples/web/favicon.ico /srv/vscp/web/
+        $(INSTALL_PROGRAM) -b -m744 config_examples/mimetypes.xml_distro /etc/vscp/mimetypes.xml
+	$(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro /etc/vscp/variables.xml
+	$(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro /etc/vscp/dm.xml
+        $(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_distro /etc/vscp
 
