Fixed compile problem in 64-bit build

--- a/src/vscp/drivers/level2/rawethernet/linux/Makefile.in
+++ b/src/vscp/drivers/level2/rawethernet/linux/Makefile.in
@@ -11,8 +11,8 @@ top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
 CXX = @CXX@
 CXXFLAGS = @CXXFLAGS@ -fPIC
-CPPFLAGS = -I include  @CPPFLAGS@ -fPIC
-CFLAGS = -fPIC
+CPPFLAGS = -I include  @CPPFLAGS@ -D__LINUX__ -fPIC
+CFLAGS = -D__LINUX__ -fPIC
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
 DLFLAGS = -g -shared -fPIC
