Fixed compile problem in 64 bit build

--- a/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
+++ b/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
@@ -10,9 +10,9 @@ top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
 CXX = @CXX@
-CXXFLAGS = @CXXFLAGS@ -fPIC
-CPPFLAGS = @CPPFLAGS@ -fPIC
-CFLAGS = -fPIC
+CXXFLAGS = @CXXFLAGS@ -D__LINUX__ -fPIC
+CPPFLAGS = @CPPFLAGS@ -D__LINUX__ -fPIC
+CFLAGS = >-D__LINUX__ -fPIC
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
 DLFLAGS = -g -shared -fPIC
