Fixed some pleaces wich give warnings in the ubuntu builds

--- a/src/vscp/drivers/level1/can232/linux/Makefile.in
+++ b/src/vscp/drivers/level1/can232/linux/Makefile.in
@@ -10,8 +10,8 @@ top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
 CXX = @CXX@
-CXXFLAGS = @CXXFLAGS@ -D__LINUX__ -fPIC
-CPPFLAGS = @CPPFLAGS@
+CXXFLAGS = @CXXFLAGS@ -D__LINUX__ -fPIC -Wformat -Wunused-result
+CPPFLAGS = @CPPFLAGS@ 
 CFLAGS = @CFLAGS@
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
